--- a/style.css
+++ b/style.css
@@ -1,19 +1,101 @@
+body {
+    font-family: 'Indie Flower', cursive;
+    background: url(img/fundo.jpg);
+}
 .cabecalho {
-    background-color: pink;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+    height: 30px;
+    padding: 5px 0;
+    /*background: purple;*/
 }
 
-.forca {
+.logo {
+    padding-left: 2%;
+    height: 35px;
+}
+
+.sessao-forca {
     width: 50%;
-    height: 300px;
+    height: 100%;
     margin: 0 auto;
-    background: blue;
+    /*background: blue;*/
     box-sizing: border-box;
 }
 
+.forca {
+    display: flex;
+    justify-content: center;
+    margin: 0 0 15px 0;
+}
+
 #imagem-forca {
-    width: 200px;
+    width: 35%;
+}
+
+.palavra-jogo {
+    /*background: red;*/
+    text-align: center;
+    height: 40px;
+}
+
+.palavra-jogo p {
+    font-size: 2em;
+}
+
+.teclado {
+    /*background: burlywood;*/
+    width: 50%;
+    margin: 10px auto;
+    text-align: center;
+}
+
+.teclado button {
+    font-family: 'Indie Flower', cursive;
+    font-size: 18px;
+    margin: 2px 0;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+}
+
+.botoes {
+    /* background: brown;*/
+    text-align: center;
+}
+
+.botoes button {
+    font-family: 'Indie Flower', cursive;
+    font-size: 18px;
+    margin: 0 5px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
 }
 
 .rodape {
-    background-color: green;
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+    justify-content: center;
+    /* background: green;*/
+}
+
+.rodape p {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: #495057;
+    font-size: 10px;
+    padding: 5px 5px;
+}
+
+.rodape a {
+    padding: 10px 0;
+}
+
+.rodape a img {
+    height: 15px;
+    padding: 2px 0;
 }
