--- a/style.css
+++ b/style.css
@@ -18,17 +18,17 @@ body {
 }
 
 .sessao-forca {
-    width: 50%;
+    width: 100%;
     height: 100%;
-    margin: 0 auto;
     /*background: blue;*/
     box-sizing: border-box;
 }
 
 .forca {
+    width: 50%;
     display: flex;
     justify-content: center;
-    margin: 0 0 15px 0;
+    margin: 10px auto;
 }
 
 #imagem-forca {
@@ -61,8 +61,13 @@ body {
     border-radius: 5px;
 }
 
+.teclado button:hover {
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .botoes {
-    /* background: brown;*/
+     /*background: brown;*/
     text-align: center;
 }
 
@@ -73,6 +78,11 @@ body {
     padding: 5px 10px;
     border: none;
     border-radius: 5px;
+}
+
+.botoes button:hover {
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .rodape {
@@ -98,4 +108,135 @@ body {
 .rodape a img {
     height: 15px;
     padding: 2px 0;
+}
+
+@media screen and (max-width: 780px) {
+    #imagem-forca {
+        width: 50%;
+        margin-bottom: 10px;
+    }
+
+    .teclado {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #imagem-forca {
+        width: 65%;
+        margin-bottom: 10px;
+    }
+
+    .teclado {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    #imagem-forca {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .palavra-jogo {
+        height: 20px;
+    }
+
+    .palavra-jogo p {
+        font-size: 20px;
+    }
+
+    .sessao-teclado {
+        width: 100%;
+    }
+
+    .teclado {
+        width: 100%;
+    }
+
+    .teclado button {
+        font-size: 10px;
+        padding: 5px 8px;
+    }
+
+    .botoes {
+        display: flex;
+        flex-direction: column;
+    }
+    .botoes button {
+        font-size: 10px;
+        margin: 5px 20px;
+    }
+
+    .rodape {
+        flex-direction: column;
+    }
+
+    .rodape p {
+        padding: 2px 0;
+    }
+
+    .imagem-rodape {
+        text-align: center;
+        padding: 0;
+        margin: 3px 0;
+    }
+}
+
+@media screen and (max-width: 200px) {
+    #imagem-forca {
+        width: 70%;
+        margin-bottom: 10px;
+    }
+
+    .palavra-jogo {
+        height: 20px;
+    }
+
+    .palavra-jogo p {
+        font-size: 10px;
+    }
+
+    .sessao-teclado {
+        padding: 0 3px;
+    }
+
+    .teclado {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+    }
+
+    .teclado-linha1, .teclado-linha2 {
+        width: 100%;
+    }
+
+    .teclado button {
+        font-size: 8px;
+        padding: 3px 5px;
+    }
+
+    .botoes {
+        display: flex;
+        flex-direction: column;
+    }
+    .botoes button {
+        font-size: 8px;
+        margin: 5px 20px;
+    }
+
+    .rodape {
+        flex-direction: column;
+    }
+
+    .rodape p {
+        padding: 2px 0;
+    }
+
+    .imagem-rodape {
+        text-align: center;
+        padding: 0;
+        margin: 3px 0;
+    }
 }
