--- a/style.css
+++ b/style.css
@@ -46,18 +46,17 @@ body {
 }
 
 #palavra-secreta-div {
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     display: flex;
     flex-direction: row;
     justify-content: center;
     font-size: 25px;
     visibility: hidden;
-    
 }
 
 .palavra-secreta-letra { 
-    margin: 0 3px 0 3px;
+    margin: 0 2px 0 2px;
     border-bottom: 2px solid black;
-    border-radius: 2px;
 }
 
 #sessao-teclado {
@@ -99,9 +98,45 @@ body {
     border-radius: 5px;
 }
 
-.botoes button:hover {
+.botoes button:hover, #popup button:hover {
     font-weight: bold;
     cursor: pointer;
+}
+
+#popup {
+    width: 30%;
+    height: 40%;
+    position: absolute;
+    top: 20%;
+    left: 35%;
+    right: 50%;
+    text-align: center;
+    border-radius: 15px;
+    padding: 10px;
+
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .5);
+    backdrop-filter: blur( 3px );
+    -webkit-backdrop-filter: blur( 3px );
+
+    display: none;
+}
+
+#popup img {
+    width: 40%;
+}
+
+#popup p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#popup button {
+    font-family: 'Indie Flower', cursive;
+    font-size: 18px;
+    margin-top: 10px;
+    padding: 5px 10px;
+    border: 2px solid darkgray;
+    border-radius: 5px;
 }
 
 .rodape {
@@ -138,6 +173,7 @@ body {
     .teclado {
         width: 100%;
     }
+
 }
 
 @media screen and (max-width: 600px) {
@@ -149,9 +185,39 @@ body {
     .teclado {
         width: 100%;
     }
+
+    #popup {
+        width: 60%;
+        height: 220px;
+        position: absolute;
+        top: 20%;
+        left: 15%;
+        right: 15%;
+    }
+
+    #popup p, #popup button {
+        font-size: 20px;
+    }
 }
 
 @media screen and (max-width: 480px) {
+    #popup {
+        width: 60%;
+        height: 36%;
+        position: absolute;
+        top: 20%;
+        left: 15%;
+        right: 15%;
+    }
+
+    #popup img {
+        width: 30%;
+    }
+
+    #popup p, #popup button {
+        font-size: 15px;
+    }
+
     .rodape {
         flex-direction: column;
     }
@@ -206,6 +272,19 @@ body {
     .botoes button {
         font-size: 10px;
         margin: 5px 20px;
+    }
+
+    #popup {
+        width: 60%;
+        height: 40%;
+        position: absolute;
+        top: 20%;
+        left: 20%;
+        right: 20%;
+    }
+
+    #popup p, #popup button {
+        font-size: 15px;
     }
 
     .rodape {
@@ -269,6 +348,19 @@ body {
     .botoes button {
         font-size: 8px;
         margin: 5px 20px;
+    }
+
+    #popup {
+        width: 60%;
+        height: 35%;
+        position: absolute;
+        top: 20%;
+        left: 15%;
+        right: 15%;
+    }
+
+    #popup p, #popup button {
+        font-size: 15px;
     }
 
     .rodape {
